compiler/testData/cli/jvm/_XnullabilityAnnotations/nullabilityAnnotations.out
compiler/testData/cli/jvm/_XnullabilityAnnotations/severalAnnotations.kt:2:11: error: null cannot be a value of a non-null type 'kotlin.String'.
    a.foo(null)
          ^^^^
COMPILATION_ERROR
